# aiq

./: CLAUDE.md  FLUTTER_ITERATION_1_SUMMARY.md  FLUTTER_PROCESSING_COMPLETE.txt  ITERATION_1_SUMMARY.txt  process-snippets.js
0/: 1.dart
projects/: proejcts_list.txt
scripts/installer/: README.md  config.sh  install-angular.sh  install-api-tools.sh  install-cpp.sh  install-data-science.sh  install-devops.sh  install-express.sh  install-flutter.sh  install-ios-tools.sh  install-iot.sh  install-macos-tools.sh  install-monitoring.sh  install-nodejs-tools.sh  install-nodejs.sh  install-pentesting.sh  install-python-tools.sh  install-pytorch.sh  install-react-native.sh  install-rust.sh  install-swift.sh  install-system-tools.sh  install-tensorflow.sh  install-vscode-extensions.sh  install-vue.sh  install_android.sh  (+13 more)
snippets/: README.md  STRUCTURE.md
templates/api/python-fastapi/: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt  setup-template.sh  update_template.sh
templates/api/python-fastapi/alembic/: env.py
templates/api/python-fastapi/app/api/: __init__.py  api.py
templates/api/python-fastapi/app/api/endpoints/: items.py  login.py  users.py
templates/api/python-fastapi/app/core/: config.py  deps.py  logging_config.py  security.py
templates/api/python-fastapi/app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
templates/api/python-fastapi/app/db/: base.py  base_class.py  init_db.py  session.py
templates/api/python-fastapi/app/models/: item.py  user.py
templates/api/python-fastapi/app/schemas/: __init__.py  item.py  msg.py  token.py  user.py
templates/api/python-fastapi/app/services/: celery_app.py  tasks.py
templates/api/python-fastapi/tests/: conftest.py  test_auth.py  test_main.py  test_users.py
templates/api/python-fastapi/tests/utils/: utils.py
templates/api/rust-actix/: .env.example  Cargo.toml  README.md  setup_template.sh  update_template.sh
templates/api/rust-actix/migrations/: 001_create_users.sql  002_create_posts.sql
templates/api/rust-actix/src/: main.rs
templates/api/rust-actix/src/config/: mod.rs
templates/api/rust-actix/src/database/: mod.rs
templates/api/rust-actix/src/handlers/: auth.rs  health.rs  mod.rs  posts.rs
templates/api/rust-actix/src/middleware/: auth.rs
templates/api/rust-actix/src/models/: post.rs  user.rs
templates/api/rust-actix/src/services/: auth.rs
(+4662 files in other folders)
