[package]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
actix-cors = "0.7"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"